Fix bug that made the project cards too big

--- a/styles.css
+++ b/styles.css
@@ -284,8 +284,8 @@ input[type="text"]:focus {
 .main-content {
   overflow-y: scroll;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  grid-auto-rows: auto;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-auto-rows: 0.3fr;
   gap: 15px;
   padding: 0 var(--spacing-sm) calc(var(--spacing-lg) * 1.5) 0;
 }
